<resources>
    <string name="app_name">Digimotion</string>

    <string name="str_zero">0</string>
    <string name="str_one">1</string>
    <string name="str_two">2</string>
    <string name="str_three">3</string>
    <string name="str_four">4</string>
    <string name="str_five">5</string>
    <string name="str_six">6</string>
    <string name="str_seven">7</string>
    <string name="str_eight">8</string>
    <string name="str_nine">9</string>

    <string name="str_sound_on">🔊</string>
    <string name="str_sound_off">🔇</string>
    <string name="str_broom">🧹</string>
    <string name="str_extinguisher">🧯</string>
    <string name="str_inbox">📥</string>
    <string name="str_satellite">📡</string>
    <string name="str_eye">👁</string>
    <string name="str_brain">🧠</string>
    <string name="str_eyes">👀</string>
    <string name="str_hit">🎯</string>

    <string name="str_musical_notes">🎶</string>
    <string name="str_piano">🎹</string>
    <string name="str_violin">🎻</string>
    <string name="str_guitar">🎸</string>
    <string name="str_trumpet">🎺</string>
    <string name="str_saxophone">🎷</string>
    <string name="str_drum">🥁</string>

    <string name="str_C">C</string>
    <string name="str_D">D</string>
    <string name="str_E">E</string>
    <string name="str_F">F</string>
    <string name="str_G">G</string>
    <string name="str_A">A</string>
    <string name="str_B">B</string>

    <string name="str_stufflex">STUFFLEX</string>

    <string name="str_s">S</string>
    <string name="str_t">t</string>
    <string name="str_u">u</string>
    <string name="str_f1">f</string>
    <string name="str_f2">f</string>
    <string name="str_l">l</string>
    <string name="str_e">e</string>
    <string name="str_x">x</string>

    <string name="str_b">b</string>
    <string name="str_y">y</string>

    <string name="str_thank_you">Thank you!</string>
</resources>